# wstunnel-desktop

./: README.md  package-lock.json  package.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/client/: client_api.rs
src/components/: ClientOptionsEditor.vue  Main.vue  WsClient.vue
src/models/: WsClientConfig.ts
