[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"

#wstunnel part
wstunnel = { path = "../../wstunnel" }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
url = "2.5.2"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
parking_lot = "0.12.3"
